Fix: Suggestions from code review
Add logging for ExportCommand and improve ImportCommand log messages.
Append the file extension (.json) to the given filename when parsing
export and import commands.
Replace usage of Paths#get(...) with Path#of(...).